# unbored

./: ChangeLog.md  Makefile  Pipfile  README.md  setup.cfg  setup.py  unbored  unbored.css
unbored/: __init__.py  __main__.py  activity.py  app.py  error_boxen.py  filter_input.py  filters.py  focus_within.py  main_screen.py  type_choices.py  unbored.css
